# G4TestBench

./: CMakeLists.txt  README.md
macros/: microPore-1.mac  microPore-100k.mac  microPore-10k.mac  microPore-1M.mac
src/: ActionInit.cc  ActionInit.hh  EventAction.cc  EventAction.hh  G4TestBench.cc  G4TestBench.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh
src/detectors/: Det1.cc  MicroPore.cc
src/physicsLists/: PeriodicXY.cc  QGSP_BERT_HP.cc
tools/G4TBMakeSpectrum/: main.go
